replace deprecated xpath by xpathbuilder and xpathexpression